--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "css-loader": "5.0.0",
+    "file-loader": "^6.2.0",
     "less": "^4.1.1",
     "less-loader": "7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "style-loader": "2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "4.31.0",
     "webpack-cli": "3.3.2"
   },
