--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "dev": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
@@ -33,7 +34,8 @@
     "style-loader": "2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "4.31.0",
-    "webpack-cli": "3.3.2"
+    "webpack-cli": "3.3.2",
+    "webpack-dev-server": "3.11.0"
   },
   "dependencies": {}
 }
