--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "5.0.0",
+    "cssnano": "^5.0.8",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "less": "^4.1.1",
     "less-loader": "7.0.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "style-loader": "2.0.0",
